# pyweek-41

./: .gitignore  Justfile  README.md  animated_mesh.frag  animated_mesh.py  animated_mesh.vert  city.blend  city.mtl  city.py  config.py  cube_with_legs.vbo  cube_with_legs00.vbo  flat_color.frag  grain.py  hud.py  legs.vert  main.py  matrix.py  mesh.frag  mesh.vert  process_obj_files.py  pyproject.toml  requirements.txt  shaders.py  shadow_map.frag  shadows.py  terrain.frag  terrain.py  terrain.vert  texture.py  textured.frag  trees.py  world_object.py  world_resource.py
data/: animated_mesh.vert  city.mtl  flat_color.frag  hud.vert  light.frag  mesh_instanced.vert  shadow_map.frag  terrain.frag
data/objs/: Tree3.obj.vbo  cannons.vbo  city.obj.vbo  head.vbo  leg1.vbo  leg2.vbo  leg3.vbo  shell.vbo
data/sounds/: aah3.flac  click.flac  cough.flac  cute3.flac  deep1.flac  (+35 more)
models/: grain.blend
objs/: Tree3.obj.vbo  armor.vbo  cranes.vbo  grain.vbo  leg4.vbo  pipe.vbo  radar.vbo  turret.vbo
sounds/: aah1.flac  aah2.flac  aah4.flac  aah5.flac  aah6.flac  cute1.flac  cute2.flac  deep3.flac  drink1.flac  drink2.flac  eat-long-1.flac  eat1.flac  eat3.flac  eat4.flac  eat5.flac  hollow1.flac  hollow3.flac  knock1.flac  knock3.flac  knock5.flac  manic-give-in-to-the-night-3.flac  manic-surrender-yourselves-to-me-1.flac  manic-surrender-yourselves-to-me-3.flac  oof2.flac  oof3.flac  oof4.flac  react1.flac  react2.flac  react3.flac  react4.flac  surprise2.flac  thud4.flac  thud6.flac  thud7.flac  um1.flac  um2.flac  um4.flac  yelp2.flac
tools/: process_obj_files.py
(+14 files in other folders)
